# handmade

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  package.json
js/src/: index.ts
rust/: Cargo.toml
rust/src/: colors.rs  main.rs  pages.rs  papers.rs  text.rs  text_img.rs  words.rs
rust/src/assets/: 00 abc.xcf
rust/src/text/: mod.rs  words.rs
rust/src/text/pages/: mod.rs  papers.rs
src/: colors.rs  index.ts  lib.rs  main.rs  text_img.rs
src/text/: images_map.rs  letter.rs  line.rs  mod.rs  paths.rs  word.rs  words.rs
src/text/pages/: canvas.rs  mod.rs
