[package]
name = "handmade"
version = "0.1.4"
authors = ["Gabriel Carneiro <gabriel.carneiro.castro@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Type with your on handwritten letter."
repository = "https://github.com/gabrielcarneiro97/handmade"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="handmade"
path="src/lib.rs"

[dependencies]
image = "0.23.10"
